improve SwaggerUI API
