# storage/api-docs/api-docs.json
@@ -2,6 +2,10 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Lumen Swagger ViaCEP API",
+        "contact": {
+            "name": "GilcierWeb",
+            "email": "gilcierweb@gmail.com"
+        },
         "license": {
             "name": "MIT"
         },
